# VBFHbb

CorrsAndSysts/: CMakeLists.txt
CorrsAndSysts/CorrsAndSysts/: BDTReweightTool.h  CorrsAndSysts.h
CorrsAndSysts/Root/: BDTReweightTool.cxx  CorrsAndSysts.cxx
CxAODMaker/: CMakeLists.txt
CxAODMaker/CxAODMaker/: AnalysisBase.h  ElectronHandler.h  EventInfoHandler.h  EventSelector.h  FatJetHandler.h  JetHandler.h  JetRegression.h  JetSemileptonic.h  METHandler.h  MuonHandler.h  ObjectHandlerBase.h  TauHandler.h  TrackJetHandler.h  TruthJetHandler.h  TruthProcessor.h
CxAODMaker/Root/: AnalysisBase.cxx  ElectronHandler.cxx  EventInfoHandler.cxx  EventSelector.cxx  FatJetHandler.cxx  ForwardElectronHandler.cxx  JetHandler.cxx  JetRegression.cxx  JetSemileptonic.cxx  LinkDef.h  METHandler.cxx  MuonHandler.cxx  ObjectHandler.cxx  ObjectHandlerBase.cxx  PhotonHandler.cxx  TauHandler.cxx  TrackJetHandler.cxx  TruthProcessor.cxx
CxAODMaker/data/: trigger_list_13TeV_bbtautau.txt
CxAODMaker_VBFHbb/: CMakeLists.txt
CxAODMaker_VBFHbb/CxAODMaker_VBFHbb/: AnalysisBase_VBFHbb.h  EventInfoHandler_VBFHbb.h  FatJetHandler_VBFHbb.h  JetHandler_VBFHbb.h  TrackJetHandler_VBFHbb.h
CxAODMaker_VBFHbb/Root/: AnalysisBase_VBFHbb.cxx  EventInfoHandler_VBFHbb.cxx  FatJetHandler_VBFHbb.cxx  JetHandler_VBFHbb.cxx  LinkDef.h  TrackJetHandler_VBFHbb.cxx
CxAODMaker_VBFHbb/cmt/: Makefile.RootCore
CxAODMaker_VBFHbb/data/: framework-run.cfg  hist_muon.root
CxAODMaker_VBFHbb/util/: vbfhbbframework.cxx
CxAODReader/: CMakeLists.txt
CxAODReader_VBFHbb/: CMakeLists.txt
CxAODReader_VBFHbb/CxAODReader_VBFHbb/: AnalysisReader_VBFHbb.h  MVATree_VBFHbb.h
CxAODReader_VBFHbb/Root/: AnalysisReader_VBFHbb.cxx  LinkDef.h  MVATree_VBFHbb.cxx
CxAODReader_VBFHbb/data/: BJetTriggerEfficiencies-00-02-01.root  BJetTriggerEfficiencies-Data2017-GRL-410470-RenamedGraphs-18Feb2019.root  BJetTriggerEfficiencies.root  BJetTurnOnFile_2016.root  Eff_1for2cen_2016B2.root  Eff_1for2cen_2016J1.root  Eff_1for2cen_2017B2.root  Eff_1for2cen_2017J1.root  Eff_1for2cen_2018B2.root  Eff_1for2cen_2018J1.root  Eff_3cen_2016B2.root  Eff_3cen_2016J1.root  Eff_3cen_2017B2.root  Eff_3cen_2017J1.root  Eff_3cen_2018B2.root  Eff_3cen_2018J1.root  SF_1for2cen_2016J1.root  SF_1for2cen_2017J1.root  SF_1for2cen_2018J1.root  SF_3cen_2016J1.root  SF_3cen_2017J1.root  SF_3cen_2018J1.root  Shower_mBB_1for2cen.root  Shower_mBB_3cen.root  Shower_nJets30pt_1for2cen.root  Shower_nJets30pt_3cen.root  TMVAClassification_BDT_AcSinica_8TeV_vvbb_2tag2jet_ptv120_ZvvHandWlvHandZllH125_qq_and_gg_0of2_root5.34.11_v7.xml  TMVAClassification_BDT_AcSinica_8TeV_vvbb_2tag2jet_ptv120_ZvvHandWlvHandZllH125_qq_and_gg_1of2_root5.34.11_v7.xml  TMVAClassification_BDT_AcSinica_8TeV_vvbb_2tag3jet_ptv120_ZvvHandWlvHandZllH125_qq_and_gg_0of2_root5.34.11_v7.xml  TMVAClassification_BDT_AcSinica_8TeV_vvbb_2tag3jet_ptv120_ZvvHandWlvHandZllH125_qq_and_gg_1of2_root5.34.11_v7.xml  TMVAClassification_BDT_LiverpoolBmham_8TeV_llbb_2tag2jet_ptv0_120_ZllH125_0of2_root5.34.05_v3.0.xml  TMVAClassification_BDT_LiverpoolBmham_8TeV_llbb_2tag2jet_ptv0_120_ZllH125_1of2_root5.34.05_v3.0.xml  centralSF.root  forwardSF.root  framework-read.cfg  herwigMbbSF.root  lwtnn1for_e50_l0.json  lwtnn1for_e50_l10.json  lwtnn_1for2cen_20190905_b100_l0.json  lwtnn_1for2cen_20190905_b100_l10.json  (+460 more)
CxAODReader_VBFHbb/data/vbf_bdt_1cen/weights/: events_BDT.class.C  events_BDT.weights.xml
CxAODReader_VBFHbb/data/vbf_bdt_1cen_exp/weights/: events_BDT.class.C  events_BDT.weights.xml
CxAODReader_VBFHbb/data/vbf_bdt_2cen/weights/: events_BDT.class.C  events_BDT.weights.xml
CxAODReader_VBFHbb/data/vbf_bdt_2cenOld/weights/: events_BDT.class.C  events_BDT.weights.xml
CxAODReader_VBFHbb/data/vbf_bdt_2cenOldExt/weights/: events_BDT.class.C  events_BDT.weights.xml
CxAODReader_VBFHbb/data/vbf_bdt_2cenWeight/weights/: events_BDT.class.C  events_BDT.weights.xml
CxAODReader_VBFHbb/data/vbf_bdt_3cen/weights/: events_BDT.class.C  events_BDT.weights.xml
CxAODReader_VBFHbb/data/vbf_bdt_4cen/weights/: events_BDT.class.C  events_BDT.weights.xml
CxAODReader_VBFHbb/data/vbf_bdt_highpt/weights/: events_BDT.class.C  events_BDT.weights.xml
CxAODReader_VBFHbb/data/vbf_bdt_topoInc/weights/: events_BDT.class.C  events_BDT.weights.xml
CxAODReader_VBFHbb/util/: vbfhbbframeworkReadCxAOD.cxx
CxAODTools/: CMakeLists.txt
CxAODTools/CxAODTools/: BTaggingTool.h  CommonProperties.h  Enums.h  EventSelection.h  OverlapRemoval.h  TriggerInfo.h  TriggerTool.h  XSectionProvider.h
CxAODTools/Root/: BTaggingTool.cxx  CommonProperties.cxx  EventSelection.cxx  EvtWeightVariations.cxx  InvDeltaROverlapTool.cxx  LinkDef.h  OverlapRemoval.cxx  PhJetOverlapTool.cxx  TMVATrainingTool.cxx  TriggerInfo.cxx  TriggerScaleFactorsMET.cxx  TriggerTool.cxx  XSectionProvider.cxx
CxAODTools/data/: sample_info_AZH.txt  sample_info_VHqq.txt
CxAODTools_VBFHbb/: CMakeLists.txt
CxAODTools_VBFHbb/CxAODTools_VBFHbb/: CommonProperties_VBFHbb.h  VBFHbbEvtSelection.h  VBFHbbEvtSelection.icc  VBFHbbInclEvtSelection.h  VBFHbbJetAssignment.h
CxAODTools_VBFHbb/Root/: VBFHbbInclEvtSelection.cxx  VBFHbbJetAssignment.cxx
FrameworkExe_VBFHbb/: CMakeLists.txt
FrameworkExe_VBFHbb/cmt/: Makefile.RootCore
FrameworkExe_VBFHbb/data/: framework-read.cfg  framework-run.cfg
FrameworkExe_VBFHbb/macros/: makePlots0Lepton.cxx  makePlots1Lepton.cxx  makePlots2Lepton.cxx  makePlotsHVTlvqq.cxx  runCxAODPlots.cxx  testCxAODvariations.cxx
FrameworkExe_VBFHbb/scripts/: GRL_checker.C  GetXSection.py  Split.py  checkYields.py  copy_CxAODs_from_eos.py  copy_CxAODs_to_eos.py  count_Nentry_SumOfWeight.py  form_HSG5_out.py  getAMIInfo.py  merge_xsections.py  plot_Vjets.C  rucio-get_jobs.py  setup_grid.txt  setup_grid_official.txt  setup_local.txt  sort_CxAOD.py
FrameworkExe_VBFHbb/util/: vbfhbbframework.cxx  vbfhbbframeworkReadCxAOD.cxx
FrameworkExe_VBFHbb/validation/: CompareCxAODs.C  CompareTuples.C  build_and_test.sh  createHtmlOverview.py  htmlwriter.py  limitFileCheck.C  stage1.sh  stage2.sh
FrameworkSub/: CMakeLists.txt  README.md  README_RunningReader.md
(+99 files in other folders)
